@@ -1,5 +1,12 @@
 2003-09-23  Roland Mas  <99.roland.mas@aist.enst.fr>
 
+	* www/my/index.php: Fixed layout of the "monitored files" and
+	"monitored forums" sections: the "You're not monitoring" message
+	is not displayed in <strong> rather than <h3>, and the explanation
+	below is in normal <p>.  That means the my/no_monitored_* entry in
+	hte *.tab files has been split into itself (for the message) and
+	my/no_monitored_*_details (for the explanation).
+
 	* www/account/change_email.php: Removed duplicate colon from PHP,
 	it belongs in the *.tab files.
 
